...
                            .foregroundColor(.black)
                            .frame(height: 100)
                    }
                    .foregroundColor(.blueish)
                    .font(.system(size: 15, weight: .bold))
                    
                    // "Add" button
                    VStack {
                    Button(action: {
                        
                        // Call function to add row in sqlite DB
                        DB_Manager().addMood(hoursSleptValue: self.hoursSlept, depressionValue: self.depressedMood, anxietyValue: self.anxietyMood, elevationValue: self.elevatedMood, irritabilityValue: self.irritabilityMood, notesValue: self.notes, dateValue: self.date)
                        
...
                        self.anxietyMood = ""
                        self.irritabilityMood = ""
                        self.notes = ""
                    },
                    label: {
                        ZStack {
                            Text("Save")
                                .foregroundColor(.pastelPink)
                                .font(.system(size: 20))
                                .fontWeight(.semibold)
                        }
                        .frame(width: 330.0, height: 45.0)
                        .clipShape(RoundedRectangle(cornerRadius: 8))
...
                
                .toolbar {
                    ToolbarItemGroup(placement: .bottomBar) {
                        HStack {
                            // Link to get to the "History" page
                            NavigationLink (destination: moodHistoryView(), label: {
                                Image(systemName: "calendar").foregroundColor(.black)
                                    .font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)
                            })
                            Divider()
                            
                            // Link to get to the "Medications" Page
                            NavigationLink(destination: medicationsListView()) {
                                Image(systemName: "pills").foregroundColor(.black)
                                    .font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)
                            }
                            Divider()
                            
                            // Link to get to the "Welcome to HarmonyMood" Page
                            NavigationLink(destination: infoView()) {
...
