...
                        
                        self.selectedMoodID = model.trackingID
                        self.selectedMood = true
                        
                    })
                    {
                        Image(systemName: "pencil").foregroundColor(.orange)
                            .font(.system(size: 33.0))
                        
                        
                    }
                    .buttonStyle(PlainButtonStyle())
                    
...
                }
            } // End of List
            .onAppear(perform: {
                self.moodModels = DB_Manager().getMood()
            })
            .listStyle(InsetGroupedListStyle())
            .navigationTitle(Text("Mood History"))
        .toolbar {
            ToolbarItemGroup(placement: .bottomBar) {
                HStack {
                    
                    // Link to get to the "TrackingPoints" Page
                    NavigationLink(destination: trackingPointsView()) {
...
